--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,15 @@ go:
   - 1.7.4
   - tip
 
+
+before_install:
+  - go get github.com/mattn/goveralls
+  - go get golang.org/x/tools/cmd/cover
+
 before_script:
   - cd server
 script:
   - go test -v -covermode=count -coverprofile=coverage.out
+  - $HOME/gopath/bin/goveralls -repotoken eiq3mo7WCKTih7FBUXbcyvOsWenxVcVoS
 
 
