--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - go get golang.org/x/tools/cmd/cover
 
 script:
-  - go test -v -covermode=count -coverprofile=coverage.out
+  #- go test -v -covermode=count -coverprofile=coverage.out
   - $HOME/gopath/bin/goveralls -repotoken eiq3mo7WCKTih7FBUXbcyvOsWenxVcVoS
 
 
